--- a/src/components/layout/layouts.scss
+++ b/src/components/layout/layouts.scss
@@ -2,13 +2,19 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
 
   &__header{
       height: 45px;
       border: 1px solid #eee;
+      box-sizing: border-box;
       
   }
-  //   &__content {}
+    &__content {
+      height: calc(100vh - 90px);
+      position: relative;
+      overflow-y: scroll;
+    }
   // &__sideer{}
   &__footer {
     width: 100%;
@@ -22,6 +28,8 @@
     align-content: center;
     align-items: center;
     border-top: 1px solid #efefef;
+    background: #fff;
+    box-sizing: border-box;
  
     &__item {
       width: 50px;
